# SSTX2-RoadToEmpress-StorySimulator

./: .gitignore  README.md  config.example.json  pyproject.toml
data/game/storyline_graph/: README.md  choice_edges.csv  edges.csv  edges.jsonl  nodes.jsonl  (+8 more)
data/knowledge/: AGENT_GUIDE.md  README.md  storyline_guide.md
docs/architecture/: agent-wiki-architecture.md  knowledge-base-architecture.md  speaker-attribution-architecture.md  storyline-graph-coverage.md  video-summary-overlay-architecture.md
src/road_state_tracker/: __init__.py  cli.py  config.py  config_inventory.py  context_boundary.py  dossier.py  dossier_unlocks.py  monitoring.py  prompt_allowlist.py  protobuf_wire.py  runtime_state.py  text_index.py
sstx2-historical-text-patch/: README.md  extra_replacements.md  patch_manifest.json  patch_manifest_zh_TW.json  patch_sstx2_history.py  sstx2-history-patch.bat
sstx2-historical-text-patch/tests/: test_patch_sstx2_history.py
tests/: test_config_inventory.py  test_context_boundary.py  test_dossier.py  test_dossier_unlocks.py  test_monitoring.py  test_prompt_allowlist.py  test_runtime_state.py  test_text_index.py
tools/: build_interactive_branch_preview.py  build_knowledge_navigation.py  build_recovered_storyline_package.py  build_storyline_lines_html.py  build_value_table.py  export_dossier_knowledge_md.py  export_video_key_subtitle_docs.py  extract_storyline_mechanics.py  generate_video_summary_overlay.py  process_no_subtitle_summaries.py  run_video_summary_batch.py  sync_srt_from_subtitle_md.py  sync_video_summaries_from_md.py  test_value_table.py
(+2991 files in other folders)
